--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "underscores",
+  "name": "hey-world",
   "version": "1.0.0",
-  "description": "Hi. I'm a starter theme called _s, or underscores, if you like. I'm a theme meant for hacking so don't use me as a Parent Theme. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.",
-  "author": "Automattic Theme Team",
+  "description": "Inspired by Hey World, https://world.hey.com/dhh",
+  "author": "Tony S",
   "license": "GPL-2.0-or-later",
   "keywords": [
     "WordPress",
     "Theme"
   ],
-  "homepage": "https://github.com/Automattic/_s#readme",
+  "homepage": "",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Automattic/_s.git"
+    "url": "git+https://github.com/sanjayatony/hey-world"
   },
   "bugs": {
-    "url": "https://github.com/Automattic/_s/issues"
+    "url": "https://github.com/sanjayatony/hey-world/issues"
   },
   "devDependencies": {
     "@wordpress/scripts": "^12.1.0",
+    "autoprefixer": "^10.2.5",
     "dir-archiver": "^1.1.1",
     "node-sass": "^4.14.1",
-    "rtlcss": "^2.5.0"
+    "postcss": "^8.2.15",
+    "postcss-cli": "^8.3.1",
+    "rtlcss": "^2.5.0",
+    "tailwindcss": "^2.1.2"
   },
   "rtlcssConfig": {
     "options": {
@@ -36,11 +40,13 @@
     "map": false
   },
   "scripts": {
+    "dev": "postcss css/tailwind.css -o app.css -w",
     "watch": "node-sass sass/ -o ./ --source-map true --output-style expanded --indent-type tab --indent-width 1 -w",
     "compile:css": "node-sass sass/ -o ./ && stylelint '*.css' --fix || true && stylelint '*.css' --fix",
     "compile:rtl": "rtlcss style.css style-rtl.css",
     "lint:scss": "wp-scripts lint-style 'sass/**/*.scss'",
     "lint:js": "wp-scripts lint-js 'js/*.js'",
     "bundle": "dir-archiver --src . --dest ../_s.zip --exclude .DS_Store .stylelintrc.json .eslintrc .git .gitattributes .github .gitignore README.md composer.json composer.lock node_modules vendor package-lock.json package.json .travis.yml phpcs.xml.dist sass style.css.map"
-  }
+  },
+  "main": "index.php"
 }
